# wasap-accademy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRODUCT_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/api/: badges.py  challenges.py  leaderboard.py  progress.py  streaks.py  tutor.py  xp.py
backend/app/auth/: middleware.py
backend/app/database/: supabase_client.py
backend/app/services/: gamification.py  progress.py  tutor.py
backend/tests/: conftest.py  test_gamification.py  test_progress.py  test_tutor.py
docs/curriculum/: SYLLABUS.md
docs/exec-plans/: 02-mdx-content_prd.md  02-mdx-content_prp.md  03-challenges-gamification_prd.md  03-challenges-gamification_prp.md  04-curriculum-expansion_prd.md  05-ux-ui-improvements_prd.md  05-ux-ui-improvements_prp.md  README.md
docs/features/: README.md  TEMPLATE.md  fase-1a-foundation.md  fase-1b-mdx-content.md  fase-1c-challenges-gamification.md
docs/testing/: README.md  TEMPLATE.md  fase-1a-foundation_testing.md  fase-1b-mdx-content_testing.md  fase-1c-challenges-gamification_testing.md
frontend/: Makefile  package-lock.json  package.json
frontend/public/: pyodide-worker.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useBadges.ts  useLeaderboard.ts  useLevelUp.ts  useProgress.ts  useStreak.ts  useXP.ts
supabase/: config.toml
supabase/migrations/: 001_auth_profiles.sql  002_progress.sql  003_gamification.sql  004_tutor.sql
(+179 files in other folders)
